SERVER-79217 Wait for step up to fully complete in PrimaryOnlyService tests

(cherry picked from commit 220f515a6e6aac4b8d6e79ed917c4816522475a4)