src/mongo/db/repl/primary_only_service_test_fixture.cpp
@@ -45,6 +45,8 @@
 namespace mongo {
 namespace repl {
 
+MONGO_FAIL_POINT_DEFINE(primaryOnlyServiceTestStepUpWaitForRebuildComplete);
+
 void PrimaryOnlyServiceMongoDTest::setUp() {
     ServiceContextMongoDTest::setUp();
 
@@ -79,6 +81,7 @@ void PrimaryOnlyServiceMongoDTest::setUp() {
         _registry->registerService(std::move(service));
         _service = _registry->lookupServiceByName(serviceName);
 
+        primaryOnlyServiceTestStepUpWaitForRebuildComplete.setMode(FailPoint::nTimes, 1);
         startup(opCtx.get());
         stepUp(opCtx.get());
     }
@@ -105,6 +108,9 @@ void PrimaryOnlyServiceMongoDTest::shutdown() {
 
 void PrimaryOnlyServiceMongoDTest::stepUp(OperationContext* opCtx) {
     repl::stepUp(opCtx, getServiceContext(), _registry, _term);
+    if (primaryOnlyServiceTestStepUpWaitForRebuildComplete.shouldFail()) {
+        _service->waitForStateNotRebuilding_forTest(opCtx);
+    }
 }
 
 void PrimaryOnlyServiceMongoDTest::stepDown() {
