src/mongo/db/repl/primary_only_service_test_fixture.h
@@ -49,6 +49,8 @@ namespace repl {
 class PrimaryOnlyService;
 class PrimaryOnlyServiceRegistry;
 
+extern FailPoint primaryOnlyServiceTestStepUpWaitForRebuildComplete;
+
 class PrimaryOnlyServiceMongoDTest : public ServiceContextMongoDTest {
 public:
     void setUp() override;
